--- a/self-improving-agents-2026-01-13.html
+++ b/self-improving-agents-2026-01-13.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://golaunchmate.github.io/craig/self-improving-agents-2026-01-14.html">
     <title>Redirecting...</title>
 </head>
