Redirect 01-13 to canonical 01-14 version

--- a/self-improving-agents-2026-01-13.html
+++ b/self-improving-agents-2026-01-13.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=self-improving-agents-2026-01-14.html">
+    <meta http-equiv="refresh" content="0; url=https://golaunchmate.github.io/craig/self-improving-agents-2026-01-14.html">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>Redirecting to <a href="self-improving-agents-2026-01-14.html">canonical version</a>...</p>
+    <p>Redirecting to <a href="https://golaunchmate.github.io/craig/self-improving-agents-2026-01-14.html">canonical version</a>...</p>
 </body>
 </html>
